--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,9 @@
   src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js"
   crossorigin></script>
 
-<script
-  src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
-  crossorigin></script>
 
+
+  <script src="https://kit.fontawesome.com/b22dd30b20.js" crossorigin="anonymous"></script>
 
   </head>
   <body>
